[gd_scene load_steps=24 format=2]

[ext_resource path="res://sfx/sfx_deathscream_alien6.wav" type="AudioStream" id=1]
[ext_resource path="res://sfx/sfx_movement_jump1.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/sfx_movement_portal4_reverse.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/sfx_movement_jump13_landing.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/sfx_movement_portal4.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/sfx_movement_footsteps5.wav" type="AudioStream" id=6]
[ext_resource path="res://textures/BlueCrystal.tres" type="Texture" id=7]
[ext_resource path="res://entities/Player.gd" type="Script" id=8]
[ext_resource path="res://1bitpack_kenney_1.1/Tilesheet/colored_transparent.png" type="Texture" id=9]
[ext_resource path="res://sfx/sfx_wpn_laser8.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 306, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 374, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 357, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 306, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 323, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 340, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 357, 119, 17, 17 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 9 )
region = Rect2( 374, 119, 17, 17 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), null ],
"loop": true,
"name": "hurt",
"speed": 16.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 6.0

[sub_resource type="Animation" id=11]
resource_name = "Die"
length = 0.5
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Spawn/BlueCrystalNW:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Spawn/BlueCrystalNW:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Spawn/BlueCrystalNE:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Spawn/BlueCrystalNE:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Spawn/BlueCrystalSW:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Spawn/BlueCrystalSW:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Spawn/BlueCrystalSE:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Spawn/BlueCrystalSE:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimatedSprite:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Spawn:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.001, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("SFX/Die")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Spawn/BlueCrystalNW:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Spawn/BlueCrystalNW:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Spawn/BlueCrystalNE:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Spawn/BlueCrystalNE:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Spawn/BlueCrystalSW:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Spawn/BlueCrystalSW:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Spawn/BlueCrystalSE:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Spawn/BlueCrystalSE:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimatedSprite:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Spawn:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("SFX/Spawn")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Walking"
length = 0.25
loop = true
step = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath("SFX/Footsteps")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( -158, 168 )
collision_layer = 4
collision_mask = 11
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 9 )
animation = "hidden"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 12 )

[node name="Knockback" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 11 )
anims/Spawn = SubResource( 12 )
anims/Walking = SubResource( 13 )

[node name="Spawn" type="Node2D" parent="."]

[node name="BlueCrystalNW" type="Sprite" parent="Spawn"]
position = Vector2( -16, -16 )
texture = ExtResource( 7 )

[node name="BlueCrystalNE" type="Sprite" parent="Spawn"]
position = Vector2( 16, -16 )
texture = ExtResource( 7 )

[node name="BlueCrystalSW" type="Sprite" parent="Spawn"]
position = Vector2( -16, 16 )
texture = ExtResource( 7 )

[node name="BlueCrystalSE" type="Sprite" parent="Spawn"]
position = Vector2( 16, 16 )
texture = ExtResource( 7 )

[node name="SFX" type="Node2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Land" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 4 )

[node name="Die" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 5 )

[node name="Spawn" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Hurt" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 1 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 10 )

[node name="Bullets" type="Node" parent="."]

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
[connection signal="timeout" from="Knockback" to="." method="_on_Knockback_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
